--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,28 +12,30 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
+<body>
 
-<div class="destop-head">
+  
+  <div class="destop-head">
     
     <div class="head">
-        <div class="head-logo">
-            <p>Aditya</p>
+      <div class="head-logo">
+        <p>Aditya</p>
             
     </div>
     <div class="head-nav">
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#exper">Experience</a></li>
-            <li><a href="#proj">Projects</a></li>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#exper">Experience</a></li>
+        <li><a href="#proj">Projects</a></li>
         <li><a href="#conta">Contact</a></li>
-    </ul>
-</div>
+      </ul>
+    </div>
 </div>
 </div>
 <div class="ham-nav">
     
 <div class="ham-head">
-    <div class="head-logo"><h1>PortFolio</h1></div>
+  <div class="head-logo"><h1>PortFolio</h1></div>
 <div class="ham-menu">
     <div class="ham-icon1" onclick="toggle1()">
         <span></span>
@@ -42,7 +44,7 @@
     </div>
     <div class="ham-icon" onclick="toggle1()">
         <ul>
-            <ul>
+          <ul>
                 <li><a href="#about" onclick="toggle1()">About</a></li>
                 <li><a href="#exper" onclick="toggle1()">Experience</a></li>
                 <li><a href="#proj" onclick="toggle1()">Projects</a></li>
@@ -50,17 +52,17 @@
             </ul>
         </ul>
     </div>
-</div>
+  </div>
 </div>
 </div>
 <div id="prof">
     <div class="prof1">
-
-    <div class="prof-img">
+      
+      <div class="prof-img">
         <img src="assets/profile-pic (1).png" alt="img" class="rounded">
-    </div>
-    <div class="prof-content">
-
+      </div>
+      <div class="prof-content">
+        
         <div class="mycontent">
             <p id="l2">Hello,I'm</p>
             <h1 id="l3" class="typewriter">M Venkata Aditya Prakash</h1>
@@ -70,7 +72,7 @@
             
             <div class="btn btn-color-2"><button onclick="window.open('resume.pdf')">Download CV</button></div>
             <div class="btn btn-color-1"><button onclick="location.href('./#contact')">Contact</button></div>
-        </div>
+          </div>
         <div class="soc-cont">
             
             <div class="linkedin-btn">
@@ -85,16 +87,16 @@
 </div>
 <div id="about1">
     <div class="abot-head-container">
-        <div class="about-head-text1"><p>Get To Know More</p></div>
+      <div class="about-head-text1"><p>Get To Know More</p></div>
         <div class="about-head-text-2"><h1>About Me</h1></div>
-    </div>
+      </div>
     <div class="about-total-cotainer">
         <div class="about-profile-edu">
             <div class="about-profile-container">
-                <img src="assets/images.jpg">
+              <img src="assets/images.jpg">
             </div>
             <div class="check">
-                <div class="check1">
+              <div class="check1">
                     
                     <div class="dissc">
                         <img src="assets/education.png">
@@ -110,8 +112,8 @@
 </div>
 </div>
 <div class="dissc-text">
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum sit aperiam, molestiae enim adipisci distinctio. Dolorem ex quaerat eum dolorum alias laudantium maxime, iure autem dolores repellendus odio numquam excepturi.
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod esse, repudiandae asperiores laborum laudantium voluptatem cupiditate adipisci amet placeat harum.
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Harum sit aperiam, molestiae enim adipisci distinctio. Dolorem ex quaerat eum dolorum alias laudantium maxime, iure autem dolores repellendus odio numquam excepturi.
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quod esse, repudiandae asperiores laborum laudantium voluptatem cupiditate adipisci amet placeat harum.
 </div>
 </div>
 </div>
@@ -128,90 +130,90 @@
     <div class="temp12">
         
         
-        <div class="skills-container">
+      <div class="skills-container">
             <div class="skills-container-head">
             <h3>Frontend Development</h3>
-        </div>
+          </div>
         <div class="skill1">
-            
-            <div class="skills-set">
-                <img src="assets/checkmark.png" class="icon">
-                <div class="text1"><h5>HTML</h5>
+          
+          <div class="skills-set">
+            <img src="assets/checkmark.png" class="icon">
+            <div class="text1"><h5>HTML</h5>
                     <p>Completed</p></div>
                     
-                </div>
-            <div class="skills-set">
+                  </div>
+                  <div class="skills-set">
                 <img src="assets/checkmark.png" class="icon">
                 <div class="text1"><h5>JavaScript</h5>
-                    <p>Completed</p></div>
+                  <p>Completed</p></div>
                     
                 </div>
-            </div>
-            <div class="skill1">
+              </div>
+              <div class="skill1">
                 
-            <div class="skills-set">
-                <img src="assets/checkmark.png" class="icon">
+                <div class="skills-set">
+                  <img src="assets/checkmark.png" class="icon">
                 <div class="text1"><h5>CSS</h5>
                     <p>Completed</p></div>
                     
-                </div>
-                <div class="skills-set">
+                  </div>
+                  <div class="skills-set">
                     <img src="assets/checkmark.png" class="icon">
                     <div class="text1"><h5>TypeScript</h5>
-                        <p>Completed</p></div>
-                        
+                      <p>Completed</p></div>
+                      
                     </div>
-                </div>
-                <div class="skill1" id="t12">
+                  </div>
+                  <div class="skill1" id="t12">
                     
                     <div class="skills-set">
-                        <img src="assets/checkmark.png" class="icon">
-                        <div class="text1"><h5>Bootstrap</h5>
-                            <p>Completed</p></div>
-                            
-                        </div>
+                      <img src="assets/checkmark.png" class="icon">
+                      <div class="text1"><h5>Bootstrap</h5>
+                        <p>Completed</p></div>
+                        
+                      </div>
             <div class="skills-set">
                 <img src="assets/checkmark.png" class="icon">
                 <div class="text1"><h5>Angular Js</h5>
-                    <p>Completed</p></div>
-                    
+                  <p>Completed</p></div>
+                  
                 </div>
             
-            
-            
+                
+                
             </div>
             
             
         </div>
         
         <div class="skills-container">
-            <div class="skills-container-head">
-                <h3>Backend Development</h3>
-            </div>
-            <div class="skill1">
-                
-                <div class="skills-set">
+          <div class="skills-container-head">
+            <h3>Backend Development</h3>
+          </div>
+          <div class="skill1">
+            
+            <div class="skills-set">
                     <img src="assets/checkmark.png" class="icon">
                     <div class="text1"><h5>Node Js</h5>
                         <p>Completed</p></div>
                         
-                    </div>
+                      </div>
                     <div class="skills-set">
-                        <img src="assets/checkmark.png" class="icon">
+                      <img src="assets/checkmark.png" class="icon">
                         <div class="text1"><h5>Express</h5>
                             <p>Completed</p></div>
                             
+                          </div>
                         </div>
-                    </div>
-                    <div class="skill1">
-                        
+                        <div class="skill1">
+                          
             <div class="skills-set">
-                <img src="assets/checkmark.png" class="icon">
+              <img src="assets/checkmark.png" class="icon">
                 <div class="text1"><h5>MySQL</h5>
                     <p>Completed</p></div>
                     
-                </div>
-                <div class="skills-set">
+                  </div>
+                  <div class="skills-set">
                     <img src="assets/checkmark.png" class="icon">
                     <div class="text1"><h5>Java</h5>
                         <p>Completed</p></div>
@@ -219,34 +221,35 @@
                     </div>
                 </div>
                 <div class="skill1" id="t12">
-                    
+                  
                 <div class="skills-set">
-                    <img src="assets/checkmark.png" class="icon">
-                    <div class="text1"><h5>JSP</h5>
-                        <p>Completed</p></div>
-                        
-                    </div>
-                    <div class="skills-set">
-                <img src="assets/checkmark.png" class="icon">
-                <div class="text1"><h5>Git</h5>
+                  <img src="assets/checkmark.png" class="icon">
+                  <div class="text1"><h5>JSP</h5>
                     <p>Completed</p></div>
                     
+                  </div>
+                  <div class="skills-set">
+                    <img src="assets/checkmark.png" class="icon">
+                    <div class="text1"><h5>Git</h5>
+                      <p>Completed</p></div>
+                    
                 </div>
+              </div>
+            
+            
+              
             </div>
+        
             
             
-            
+          </div>
+          <div class="down-arrow-1"><a href="#about"><img src="assets/arrow.png"></a></div>
+
+          
+          
+          
         </div>
-        
-        
-        
-    </div>
-    <div class="down-arrow-1"><a href="#about"><img src="assets/arrow.png"></a></div>
-
-
-    
-    
-</div>
-<script src="k1.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+        <script src="k1.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+      </body>
 </html>
